--- a/Airline_passenger.ipynb
+++ b/Airline_passenger.ipynb
@@ -26,20 +26,15 @@
         "K5QZ13OEpz2H",
         "lQ7QKXXCp7Bj",
         "KSlN3yHqYklG",
-        "yLjJCtPM0KBk",
         "xiyOF9F70UgQ",
         "-oLEiFgy-5Pf",
         "id1riN9m0vUs",
-        "89xtkJwZ18nB",
         "BhH2vgX9EjGr",
         "OB4l2ZhMeS1U",
-        "dJ2tPlVmpsJ0",
-        "JWYfwnehpsJ1",
+        "4qY1EAkEfxKe",
         "Fze-IPXLpx6K",
-        "7AN1z2sKpx6M",
-        "9PIHJqyupx6M",
-        "cBFFvTBNJzUa",
-        "gCX9965dhzqZ",
+        "fb9ixwSrjuFO",
+        "nR3fHHxdRi7e",
         "gIfDvo9L0UH2"
       ],
       "include_colab_link": true
@@ -338,6 +333,20 @@
       ],
       "metadata": {
         "id": "twqn_IYnIRiP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install shap==0.40.0\n",
+        "import shap \n",
+        "import graphviz\n",
+        "sns.set_style('darkgrid') "
+      ],
+      "metadata": {
+        "id": "Kbz2H9mGV2cL"
       },
       "execution_count": null,
       "outputs": []
@@ -2805,9 +2814,9 @@
       "source": [
         "param_grid = [    \n",
         "    {'penalty' : ['l1', 'l2', 'elasticnet', 'none'],\n",
-        "    'C' : np.logspace(-4, 4, 20),\n",
+        "    'C' : np.logspace(1, 5, 10),\n",
         "    'solver' : ['lbfgs','newton-cg','liblinear','sag','saga'],\n",
-        "    'max_iter' : [100, 1000,2500, 5000]\n",
+        "    'max_iter' : [1000,2500, 5000,10000]\n",
         "    }\n",
         "]"
       ],
@@ -2831,7 +2840,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#best_clf = clf.fit(x,y)"
+        "best_clf = clf.fit(x,y)"
       ],
       "metadata": {
         "id": "uCCNXlhT1rH9"
@@ -2873,18 +2882,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Here we use GridSearchCV Hyperparameter optimization technique.\n",
-        "\n",
-        "Accuracy : Accuracy will require two inputs (i) actual class labels (ii)predicted class labels. To get the class labels from probabilities( these probabilities will be probabilities of getting a HIT), you can take a threshold of 0.5. Any probability above 0.5 will be labeled as class 1 and anything less than 0.5 will be labeled as class 0.\n",
-        "\n",
-        "\n",
-        "Precision : Precision for a label is defined as the number of true positives divided by the number of predicted positives. Report precision in percentages.\n",
-        "\n",
-        "\n",
-        "Recall : Recall for a label is defined as the number of true positives divided by the total number of actual positives. Report recall in percentages.\n",
-        "\n",
-        "\n",
-        "F1-Score : This is defined as the harmonic mean of precision and recall.\n"
+        "Here we use GridSearchCV Hyperparameter optimization technique for better accuracy score\n"
       ],
       "metadata": {
         "id": "negyGRa7fxKf"
@@ -2989,7 +2987,9 @@
       "source": [
         "#report of decision tree \n",
         "report_dec_tree = classification_report(y_test, y_pred)\n",
-        "print(report_dec_tree)"
+        "print(report_dec_tree)\n",
+        "dm = confusion_matrix(y_test, y_pred)\n",
+        "sns.heatmap(dm,annot=True)"
       ],
       "metadata": {
         "id": "6KHU_39d3av7"
@@ -3097,7 +3097,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "94% accuracy of Decision Tree with the help of hypermatring tunning."
+        "***94% accuracy of Decision Tree with the help of hypermatring tunning.***"
       ],
       "metadata": {
         "id": "74yRdG6UpsJ3"
@@ -3150,11 +3150,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "92% accuracy with Random Forest"
+      ],
+      "metadata": {
+        "id": "KafcafQ15-Sg"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#report of decision tree \n",
         "report_ran_forest = classification_report(y_test, y_pred)\n",
-        "print(report_ran_forest)"
+        "print(report_ran_forest)\n",
+        "cm = confusion_matrix(y_test, y_pred)\n",
+        "sns.heatmap(cm,annot=True)"
       ],
       "metadata": {
         "id": "bc73urB2-g69"
@@ -3253,7 +3264,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "After Hypermeter tuning we did not find any improvement in the score"
+        "**After Hypermeter tuning we get a better score and the accuracy is 94%.**"
       ],
       "metadata": {
         "id": "MzVzZC6opx6N"
@@ -3322,11 +3333,23 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Train accuracy-95%.\n",
+        "\n",
+        "Test accuracy-93%."
+      ],
+      "metadata": {
+        "id": "Ibr5IAnZ8ET9"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#cofusion matrix of k_neighbor  \n",
         "confuse_matrix_k_neighbor  = confusion_matrix(y_test,y_pred)\n",
-        "confuse_matrix_k_neighbor"
+        "print(confuse_matrix_k_neighbor)\n",
+        "sns.heatmap(confuse_matrix_k_neighbor,annot=True)"
       ],
       "metadata": {
         "id": "HaLoDDU9hE0W"
@@ -3384,7 +3407,7 @@
       "source": [
         "knn = KNeighborsClassifier()\n",
         "knn_cv= GridSearchCV(knn,param_grid,cv=5)\n",
-        "#knn_cv.fit(x,y)"
+        "knn_cv.fit(x,y)"
       ],
       "metadata": {
         "id": "Xqg-12YujZRo"
@@ -3395,7 +3418,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#knn_cv.best_score_"
+        "knn_cv.best_score_"
       ],
       "metadata": {
         "id": "OwYafVSwjZUC"
@@ -3417,7 +3440,43 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###ML Model - 5 Naïve Bayes Classifier"
+        "##### Which hyperparameter optimization technique have you used and why?"
+      ],
+      "metadata": {
+        "id": "9M0UStWC7pfk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here we used GridSearchCv for improve the accuracy"
+      ],
+      "metadata": {
+        "id": "J7TWMuzA7sND"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### Have you seen any improvement?"
+      ],
+      "metadata": {
+        "id": "q1NRKnt97sfy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**After using Hypermeter tuning we get a better accuracy score and the accuracy is 94%.**"
+      ],
+      "metadata": {
+        "id": "_qf7gKsG65q8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###ML Model - 5 Naive Bayes Classifier"
       ],
       "metadata": {
         "id": "heVVxVWalj0p"
@@ -3463,12 +3522,37 @@
     {
       "cell_type": "code",
       "source": [
+        "y_pred"
+      ],
+      "metadata": {
+        "id": "WHUVq_yH8wID"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# comparing actual response values (y_test) with predicted response values (y_pred)\n",
         "from sklearn import metrics\n",
-        "print(\"Gaussian Naive Bayes model accuracy(in %):\", metrics.accuracy_score(y_test, y_pred)*100)"
+        "print(\"Gaussian Naive Bayes model accuracy:\", metrics.accuracy_score(y_test, y_pred))"
       ],
       "metadata": {
         "id": "vQu1rDRmmBJv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#confusion matrix\n",
+        "naive_bayes_con_mat = confusion_matrix( y_test,y_pred)\n",
+        "print(naive_bayes_con_mat)\n",
+        "sns.heatmap(naive_bayes_con_mat,annot=True)"
+      ],
+      "metadata": {
+        "id": "HvUpLg_M0m2x"
       },
       "execution_count": null,
       "outputs": []
@@ -3481,19 +3565,6 @@
       "metadata": {
         "id": "1CCHZDBSmIeW"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#confusion matrix\n",
-        "naive_bayes_con_mat = confusion_matrix( y_test,y_pred)\n",
-        "naive_bayes_con_mat"
-      ],
-      "metadata": {
-        "id": "HvUpLg_M0m2x"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -3554,13 +3625,21 @@
       "source": [
         "#confusion matrix\n",
         "support_vector_con_mat = confusion_matrix( y_test,y_pred)\n",
-        "support_vector_con_mat"
+        "print(support_vector_con_mat)\n",
+        "sns.heatmap(support_vector_con_mat,annot=True)"
       ],
       "metadata": {
         "id": "AUBZ9hrEmnkF"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "UH-BojpBPoFC"
+      }
     },
     {
       "cell_type": "markdown",
@@ -3577,7 +3656,31 @@
         "### 1. Which Evaluation metrics did you consider for a positive business impact and why?"
       ],
       "metadata": {
-        "id": "h_CCil-SKHpo"
+        "id": "nR3fHHxdRi7e"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* I would like to go with Precision.\n",
+        "* model evaluation metrics comparison, we can see that K-Nearest Machine being the model with highest accuracy rate by a very small margin, works best among the experimented models for the given dataset.\n",
+        "---------\n",
+        "* Accuracy : Accuracy will require two inputs (i) actual class labels (ii)predicted class labels. To get the class labels from probabilities( these probabilities will be probabilities of getting a HIT), you can take a threshold of 0.5. Any probability above 0.5 will be labeled as class 1 and anything less than 0.5 will be labeled as class 0.\n",
+        "* Precision : Precision for a label is defined as the number of true positives divided by the number of predicted positives. Report precision in percentages.\n",
+        "* Recall : Recall for a label is defined as the number of true positives divided by the total number of actual positives. Report recall in percentages.\n",
+        "* F1-Score : This is defined as the harmonic mean of precision and recall"
+      ],
+      "metadata": {
+        "id": "jz8nhMiCRlQu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###  Which ML model did you choose from the above created models as your final prediction model and why?"
+      ],
+      "metadata": {
+        "id": "cBFFvTBNJzUa"
       }
     },
     {
@@ -3606,10 +3709,10 @@
         "  \n",
         "  train_scores.append(train_accuracy_score)\n",
         "  test_scores.append(test_accuracy_score)\n",
-        "\n",
         "  # Get the precision scores\n",
         "  train_precision_score = precision_score(y_train,y_train_preds)\n",
         "  test_precision_score = precision_score(y_test,y_test_preds)\n",
+        "\n",
         "  train_scores.append(train_precision_score)\n",
         "  test_scores.append(test_precision_score)\n",
         "\n",
@@ -3626,10 +3729,11 @@
         "\n",
         "  train_scores.append(train_roc_auc_score)\n",
         "  test_scores.append(test_roc_auc_score)\n",
-        "  "
+        "\n",
+        "  return train_scores,test_scores,metrics\n"
       ],
       "metadata": {
-        "id": "cwPQGok1rmf_"
+        "id": "q8Dz1RTb9KMW"
       },
       "execution_count": null,
       "outputs": []
@@ -3637,11 +3741,11 @@
     {
       "cell_type": "code",
       "source": [
-        "models=[log_reg,tree_cv,random_forest,k_neighbor,support_vector,naive_bayes]\n",
-        "name=['Logistic Regression Model','Decision Tree Model After Hyperparameter Tuning','Random Forest Model After Hyperparameter Tuning','k_neighbor','support vector','naive bayes']"
+        "models=[log_reg,tree_cv,random_forest_gridcv,knn_cv,naive_bayes,support_vector]\n",
+        "name=['Logistic Regression Model','Decision Tree Model After Hyperparameter Tuning','Random Forest Model After Hyperparameter Tuning','Knn Model After Hyperparameter Tuning','Naive BayesModel','Support vector model']"
       ],
       "metadata": {
-        "id": "EqaCeGScryRy"
+        "id": "cMW8SlTE9KiO"
       },
       "execution_count": null,
       "outputs": []
@@ -3651,13 +3755,13 @@
       "source": [
         "for model_ in range(len(models)):\n",
         "  train_score_,test_score_,metrics_=accuracy_of_each_model(models[model_],x_train,x_test)\n",
-        "  print(\"-*-*-\"*3+f\"{name[model_]}\"+\"-*-*-\"*4)\n",
+        "  print(\"-----\"*3+f\"{name[model_]}\"+\"-----\"*3)\n",
         "  print(\"\")\n",
         "  print(pd.DataFrame(data={'Metrics':metrics_,'Train_Score':train_score_,'Test_Score':test_score_}))\n",
         "  print(\"\")"
       ],
       "metadata": {
-        "id": "5UgrLTKtryVF"
+        "id": "MRdZeiQQ9LCl"
       },
       "execution_count": null,
       "outputs": []
@@ -3665,7 +3769,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "From the above dataframe we can chose  model for final prediction model because this model is perform better compare to other model.Random forest regression was also perform good in this mode"
+        "* From the above snap shot, we can clearly see that for the accuracy and roc auc score is improved for K-Nearest Neighbors.\n",
+        "So, I have chosen K-Nearest Neighbors as the final prdiction model which should be deployed for real user interaction.\n",
+        "* All the others model are also perform well in this dataset but I chose K-Nearest Neighbors model.\n"
       ],
       "metadata": {
         "id": "jHVz9hHDKFms"
@@ -3674,37 +3780,30 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 2. Which ML model did you choose from the above created models as your final prediction model and why?"
-      ],
-      "metadata": {
-        "id": "cBFFvTBNJzUa"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "6ksF5Q1LKTVm"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "### 3. Explain the model which you have used and the feature importance using any model explainability tool?"
       ],
       "metadata": {
-        "id": "HvGl1hHyA_VK"
+        "id": "zosx0Wx0Q9w-"
       }
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "Answer Here."
+        "#Get shap values\n",
+        "explainer = shap.Explainer(log_reg)\n",
+        "shap_values = explainer(x_test) "
       ],
       "metadata": {
-        "id": "YnvVTiIxBL-C"
+        "id": "olxhr_OkQ_zX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "QNcZFnJ8RAqI"
       }
     },
     {
@@ -3732,7 +3831,7 @@
         "\n",
         "* Based on the knowledge of the business and the problem usecase. The Classification metrics of Recall is given first priority , Accuray is given second priority , and ROC AUC is given third priority.\n",
         "\n",
-        "* We have built classifier models using 6 different types of classifiers and all these are able to give accuracy of more than 90%.* We can conclude that LogisticRegression gives the best model.\n",
+        "* We have built classifier models using 6 different types of classifiers and all these are able to give accuracy of more than 90%.* We can conclude that Decission Tree gives the best model.\n",
         "\n",
         "* model evaluation metrics comparison, we can see that Support Vector Machine being the model with highest accuracy rate by a very small margin, works best among the experimented models for the given dataset.\n",
         "\n",
