--- a/Airline_passenger.ipynb
+++ b/Airline_passenger.ipynb
@@ -11,7 +11,6 @@
         "w6K7xa23Elo4",
         "yQaldy8SH6Dl",
         "mDgbUHAGgjLW",
-        "HhfV-JJviCcP",
         "3RnN4peoiCZX",
         "JlHwYmJAmNHm",
         "35m5QtbWiB9F",
@@ -3677,7 +3676,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###  Which ML model did you choose from the above created models as your final prediction model and why?"
+        "### 2. Which ML model did you choose from the above created models as your final prediction model and why?"
       ],
       "metadata": {
         "id": "cBFFvTBNJzUa"
@@ -3789,19 +3788,102 @@
     {
       "cell_type": "code",
       "source": [
-        "#Get shap values\n",
-        "explainer = shap.Explainer(log_reg)\n",
-        "shap_values = explainer(x_test) "
+        "# Initialize JavaScript visualizations in notebook environment\n",
+        "shap.initjs()\n",
+        "# Define a tree explainer for the built model\n",
+        "explainer = shap.TreeExplainer(decision_classify)\n",
+        "# obtain shap values for the first row of the test data\n",
+        "shap_values = explainer.shap_values(x_test)"
       ],
       "metadata": {
-        "id": "olxhr_OkQ_zX"
+        "id": "SvXTWKL4ixDn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Initialize JavaScript visualizations in notebook environment\n",
+        "shap.initjs()\n",
+        "# Forceplot for first observation\n",
+        "shap.force_plot(explainer.expected_value[0], shap_values[0], x_test.iloc[0])"
+      ],
+      "metadata": {
+        "id": "Z-pXyMupn5xa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_test.mean()"
+      ],
+      "metadata": {
+        "id": "z7VorfdakSFI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Obtain a Scatter Summary Plot \n",
+        "shap_values = shap.TreeExplainer(decision_classify).shap_values(x_test)\n",
+        "shap.summary_plot(shap_values[0], x_test)"
+      ],
+      "metadata": {
+        "id": "QbVpV-t6kSIV"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "This plot is made of all the dots in the train data. It demonstrates the following information:\n",
+        "\n",
+        "* Feature importance: Variables are ranked in descending order.\n",
+        "\n",
+        "* Impact: The horizontal location shows whether the effect of that value is associated with a higher or lower prediction.\n",
+        "\n",
+        "* Original value: Color shows whether that variable is high (in red) or low (in blue) for that observation.\n",
+        "\n",
+        "* Red indicates a higher and blue indicates a lower . From the X-axis we can verify the impact (Positive or Negative) for that specific data."
+      ],
+      "metadata": {
+        "id": "-WS4c5HTlKcs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Obtain a Bar Summary Plot\n",
+        "shap.summary_plot(shap_values, x_train, plot_type=\"bar\")"
+      ],
+      "metadata": {
+        "id": "CQPNVJATkli3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A variable importance plot lists the most significant variables in descending order. The top variables contribute more to the model than the bottom ones and thus have high predictive power.\n",
+        "\n",
+        "Here, we can see the feature importance for respective classes in a descending order"
+      ],
+      "metadata": {
+        "id": "eWxYwpc6lfjJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The most important feature are overall rating and Value for money that contribute to a model's prediction whether a passenger will recommened a particular airline to his/her friends."
+      ],
       "metadata": {
         "id": "QNcZFnJ8RAqI"
       }
@@ -3827,7 +3909,7 @@
         "5. Naive Bayes\n",
         "6. Support Vector Machine Model\n",
         "\n",
-        "* We performed Hyperparameter tuning using Gridsearch CV method for Decision Tree Model, Random Forest Model , K-Nearest Neighbor ,Support Vector Machine and Naive Bayes. To increase accuracy and avoid Overfitting Criteria, this is done. After that, we finalized the Gradient Boosting model by fine-tuning the hyperparameters.\n",
+        "* We performed Hyperparameter tuning using Gridsearch CV method for Decision Tree Model, Random Forest Model , K-Nearest Neighbor ,Support Vector Machine and Naive Bayes. To increase accuracy and avoid Overfitting Criteria.\n",
         "\n",
         "* Based on the knowledge of the business and the problem usecase. The Classification metrics of Recall is given first priority , Accuray is given second priority , and ROC AUC is given third priority.\n",
         "\n",
