--- a/Airline_passenger.ipynb
+++ b/Airline_passenger.ipynb
@@ -3806,11 +3806,12 @@
       "source": [
         "# Initialize JavaScript visualizations in notebook environment\n",
         "shap.initjs()\n",
-        "# Forceplot for first observation\n",
-        "shap.force_plot(explainer.expected_value[0], shap_values[0], x_test.iloc[0])"
+        "# obtain shap values for the first row of the test data\n",
+        "shap_values = explainer.shap_values(x_test.iloc[0])\n",
+        "shap.force_plot(explainer.expected_value[0], shap_values[0], x_test.iloc[0]) "
       ],
       "metadata": {
-        "id": "Z-pXyMupn5xa"
+        "id": "G53CVos1odsM"
       },
       "execution_count": null,
       "outputs": []
